--- a/src/app/main-login/sign-in/sign-in.component.html
+++ b/src/app/main-login/sign-in/sign-in.component.html
@@ -1,1 +1,26 @@
-<p>sign-in works!</p>
+<form *ngIf="form" [formGroup]="form" (ngSubmit)="login()" class="login">
+    <h1>Sing In</h1>
+    <div class="login__form">
+        <mat-form-field appearance="outline">
+            <mat-label>Email</mat-label>
+            <input matInput type="text" name="email" id="email" placeholder="milton.velillac@gmail.com"
+                formControlName="email" />
+            <!-- <mat-error *ngIf="form.get('email').errors?.email" id="emailError">
+                The email is wrong
+            </mat-error>
+            <mat-error *ngIf="form.get('email').errors?.required" id="emailRequiredError">
+                This field is required
+            </mat-error> -->
+        </mat-form-field>
+
+        <mat-form-field appearance="outline">
+            <mat-label>Password</mat-label>
+            <input matInput type="password" name="password" id="password" formControlName="password" />
+            <!-- <mat-error *ngIf="form.get('password').errors?.pattern" id="passwordPatternError">
+                The password must contain between 4 and 10 characters
+            </mat-error> -->
+        </mat-form-field>
+
+        <app-main-button class="big">Save</app-main-button>
+    </div>
+</form>
