mat icons have added to form

--- a/src/app/main-login/sign-up/sign-up.component.html
+++ b/src/app/main-login/sign-up/sign-up.component.html
@@ -2,22 +2,22 @@
     <h1>Create Account</h1>
     <div class="signup__form">
         <mat-form-field appearance="outline">
-            <mat-label>Name</mat-label>
+            <mat-label><mat-icon matSuffix>face</mat-icon> Name</mat-label>
             <input matInput type="text" name="name" id="name" placeholder="Milton Velilla" formControlName="name" />
         </mat-form-field>
         <mat-form-field appearance="outline">
-            <mat-label>Email</mat-label>
+            <mat-label><mat-icon matSuffix>email</mat-icon> Email</mat-label>
             <input matInput type="text" name="email" id="email" placeholder="milton.velillac@gmail.com"
                 formControlName="email" />
         </mat-form-field>
 
         <mat-form-field appearance="outline">
-            <mat-label>Password</mat-label>
+            <mat-label><mat-icon matSuffix>lock</mat-icon> Password</mat-label>
             <input matInput type="password" name="password" id="password" formControlName="password" />
         </mat-form-field>
         <mat-form-field appearance="outline">
-            <mat-label>Repeat Your Password</mat-label>
-            <input matInput type="passwordRepeat" name="passwordRepeat" id="passwordRepeat"
+            <mat-label><mat-icon matSuffix>lock</mat-icon> Repeat Your Password</mat-label>
+            <input matInput type="password" name="passwordRepeat" id="passwordRepeat"
                 formControlName="passwordRepeat" />
         </mat-form-field>
 
