--- a/src/app/main-login/sign-in/sign-in.component.html
+++ b/src/app/main-login/sign-in/sign-in.component.html
@@ -2,25 +2,30 @@
     <h1>Sing In</h1>
     <div class="login__form">
         <mat-form-field appearance="outline">
-            <mat-label><mat-icon matSuffix>email</mat-icon> Email</mat-label>
+            <mat-label>
+                <mat-icon matSuffix>email</mat-icon> Email
+            </mat-label>
             <input matInput type="text" name="email" id="email" placeholder="milton.velillac@gmail.com"
                 formControlName="email" />
-            <!-- <mat-error *ngIf="form.get('email').errors?.email" id="emailError">
-                The email is wrong
+            <mat-error *ngIf="form.get('email')?.errors?.required" id="emailRequiredError">
+                {{uiMessages.requieredField}}
             </mat-error>
-            <mat-error *ngIf="form.get('email').errors?.required" id="emailRequiredError">
-                This field is required
-            </mat-error> -->
+            <mat-error *ngIf="form.get('email')?.errors?.email" id="emailError">
+                {{uiMessages.wrongEmail}}
+            </mat-error>
         </mat-form-field>
 
         <mat-form-field appearance="outline">
-            <mat-label><mat-icon matSuffix>lock</mat-icon> Password</mat-label>
+            <mat-label>
+                <mat-icon matSuffix>lock</mat-icon> Password
+            </mat-label>
             <input matInput type="password" name="password" id="password" formControlName="password" />
-            <!-- <mat-error *ngIf="form.get('password').errors?.pattern" id="passwordPatternError">
-                The password must contain between 4 and 10 characters
-            </mat-error> -->
+            <mat-error *ngIf="form.get('password')?.errors?.pattern || form.get('password')?.errors?.required"
+                id="passwordPatternError">
+                {{uiMessages.wrongPasswor}}
+            </mat-error>
         </mat-form-field>
-
+        <br>
         <app-main-button class="big">Save</app-main-button>
     </div>
 </form>
