--- a/src/app/main-login/sign-up/sign-up.component.html
+++ b/src/app/main-login/sign-up/sign-up.component.html
@@ -2,25 +2,46 @@
     <h1>Create Account</h1>
     <div class="signup__form">
         <mat-form-field appearance="outline">
-            <mat-label><mat-icon matSuffix>face</mat-icon> Name</mat-label>
+            <mat-label>
+                <mat-icon matSuffix>face</mat-icon> Name
+            </mat-label>
             <input matInput type="text" name="name" id="name" placeholder="Milton Velilla" formControlName="name" />
+            <mat-error *ngIf="form.get('name')?.errors?.required">
+                {{uiMessages.requieredField}}
+            </mat-error>
         </mat-form-field>
         <mat-form-field appearance="outline">
-            <mat-label><mat-icon matSuffix>email</mat-icon> Email</mat-label>
+            <mat-label>
+                <mat-icon matSuffix>email</mat-icon> Email
+            </mat-label>
             <input matInput type="text" name="email" id="email" placeholder="milton.velillac@gmail.com"
                 formControlName="email" />
+            <mat-error *ngIf="form.get('email')?.errors?.required" id="emailRequiredError">
+                {{uiMessages.requieredField}}
+            </mat-error>
+            <mat-error *ngIf="form.get('email')?.errors?.email" id="emailError">
+                {{uiMessages.wrongEmail}}
+            </mat-error>
         </mat-form-field>
 
         <mat-form-field appearance="outline">
-            <mat-label><mat-icon matSuffix>lock</mat-icon> Password</mat-label>
+            <mat-label>
+                <mat-icon matSuffix>lock</mat-icon> Password
+            </mat-label>
             <input matInput type="password" name="password" id="password" formControlName="password" />
+            <mat-error *ngIf="form.get('password')?.errors?.pattern || form.get('password')?.errors?.required"
+                id="passwordPatternError">
+                {{uiMessages.wrongPasswor}}
+            </mat-error>
         </mat-form-field>
         <mat-form-field appearance="outline">
-            <mat-label><mat-icon matSuffix>lock</mat-icon> Repeat Your Password</mat-label>
+            <mat-label>
+                <mat-icon matSuffix>lock</mat-icon> Repeat Your Password
+            </mat-label>
             <input matInput type="password" name="passwordRepeat" id="passwordRepeat"
                 formControlName="passwordRepeat" />
         </mat-form-field>
-
+        <br>
         <app-main-button class="big">Save</app-main-button>
     </div>
 </form>
