FIX buttons text

--- a/src/app/main-login/sign-in/sign-in.component.html
+++ b/src/app/main-login/sign-in/sign-in.component.html
@@ -26,6 +26,6 @@
             </mat-error>
         </mat-form-field>
         <br>
-        <app-main-button class="big">Save</app-main-button>
+        <app-main-button class="big">SIGN IN</app-main-button>
     </div>
 </form>
