--- a/src/app/main-login/sign-up/sign-up.component.html
+++ b/src/app/main-login/sign-up/sign-up.component.html
@@ -42,6 +42,6 @@
                 formControlName="passwordRepeat" />
         </mat-form-field>
         <br>
-        <app-main-button class="big">Save</app-main-button>
+        <app-main-button class="big">SIGN UP</app-main-button>
     </div>
 </form>
