--- a/src/app/main-login/sign-up/sign-up.component.html
+++ b/src/app/main-login/sign-up/sign-up.component.html
@@ -44,4 +44,19 @@
         <br>
         <app-main-button class="big">SIGN UP</app-main-button>
     </div>
+
+    <div class="signup__social-media">
+        <p>Or use your social media to sign up</p>
+        <div class="signup__social-media__buttons">
+            <a (click)="signUpGoogle()">
+                <svg width="50px" height="50px" enable-background="new 0 0 32 32" id="Layer_1" version="1.1" viewBox="0 0 32 32" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><g id="OUTLINE_copy_2"><g><path d="M16,0C7.163,0,0,7.164,0,16s7.163,16,16,16c8.836,0,16-7.164,16-16S24.837,0,16,0z M16.173,24.596    c-4.749,0-8.596-3.847-8.596-8.596s3.847-8.596,8.596-8.596c2.321,0,4.261,0.855,5.748,2.24l-2.423,2.423v-0.005    c-0.902-0.86-2.047-1.3-3.325-1.3c-2.836,0-5.141,2.396-5.141,5.232s2.305,5.238,5.141,5.238c2.573,0,4.325-1.472,4.685-3.492    h-4.685v-3.353h8.085c0.107,0.574,0.166,1.177,0.166,1.805C24.424,21.104,21.136,24.596,16.173,24.596z"/></g></g></svg>
+            </a>
+            <a> 
+                <svg width="50px" height="50px" enable-background="new 0 0 32 32" version="1.1" viewBox="0 0 32 32" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><g id="OUTLINE_copy_2"><g><path d="M16,0C7.164,0,0,7.164,0,16s7.164,16,16,16s16-7.164,16-16S24.836,0,16,0z M19.488,15.999h-2.239v8.124h-3.357V16h-1.677    v-2.8h1.677v-1.681c0-2.284,0.947-3.642,3.637-3.642h2.24v2.8h-1.4c-1.047,0-1.117,0.392-1.117,1.121L17.249,13.2h2.536    L19.488,15.999z"/></g></g></svg>
+            </a>
+            <a>
+                <svg width="50px" height="50px" enable-background="new 0 0 32 32" version="1.1" viewBox="0 0 32 32" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><g id="OUTLINE_copy_2"><g><path d="M16,0C7.164,0,0,7.164,0,16s7.164,16,16,16s16-7.164,16-16S24.836,0,16,0z M24.44,10.857    c-0.074,0.124-0.454,0.559-0.86,0.956c-0.688,0.683-0.725,0.757-0.725,1.329c0,0.881-0.417,2.72-0.835,3.725    c-0.774,1.888-2.432,3.838-4.091,4.82c-2.334,1.378-5.442,1.727-8.059,0.919c-0.872-0.274-2.371-0.969-2.371-1.093    c0-0.038,0.454-0.087,1.008-0.1c1.155-0.024,2.31-0.346,3.292-0.919l0.663-0.398l-0.762-0.26c-1.081-0.373-2.051-1.23-2.297-2.037    c-0.074-0.261-0.049-0.274,0.638-0.274l0.712-0.012l-0.602-0.286c-0.713-0.361-1.364-0.968-1.683-1.59    c-0.233-0.447-0.528-1.577-0.442-1.664c0.025-0.037,0.283,0.038,0.577,0.137c0.847,0.311,0.958,0.236,0.467-0.286    c-0.921-0.944-1.204-2.347-0.762-3.676l0.209-0.596l0.811,0.807c1.659,1.627,3.612,2.596,5.847,2.881l0.614,0.074l-0.037-0.609    c-0.11-1.577,0.86-3.018,2.396-3.577c0.565-0.199,1.524-0.223,2.15-0.05c0.246,0.074,0.712,0.323,1.044,0.546l0.602,0.41    l0.663-0.212c0.369-0.111,0.86-0.298,1.081-0.422c0.209-0.112,0.393-0.174,0.393-0.137c0,0.211-0.455,0.932-0.835,1.329    c-0.517,0.559-0.369,0.609,0.675,0.236C24.55,10.621,24.563,10.621,24.44,10.857z"/></g></g></svg>
+            </a>
+        </div>
+    </div>
 </form>
