--- a/src/app/main-login/sign-up/sign-up.component.html
+++ b/src/app/main-login/sign-up/sign-up.component.html
@@ -1,5 +1,5 @@
 <form *ngIf="form" [formGroup]="form" (ngSubmit)="signUp()" class="signup">
-    <h1>Create Account</h1>
+    <h1 class="signup__title">Create Account</h1>
     <div class="signup__form">
         <mat-form-field appearance="outline">
             <mat-label>
