--- a/src/app/shared/ui/main-button/main-button.component.html
+++ b/src/app/shared/ui/main-button/main-button.component.html
@@ -1,3 +1,3 @@
-<button mat-raised-button color="primary" class="mainButton">
+<button mat-raised-button color="primary" class="mainButton" [disabled]="disabled">
     <ng-content></ng-content>
 </button>
