--- a/src/app/main-login/sign-up/sign-up.component.scss
+++ b/src/app/main-login/sign-up/sign-up.component.scss
@@ -1,22 +1,18 @@
 .signup {
     padding: 50px;
+    
     &__title {
         text-align: center;
         font-weight: 500;
+    }
+    &__spinner {
+        margin-bottom: 10px;
     }
     &__social-media {
         margin-top: 30px;
         display: flex;
         flex-direction: column;
         align-items: center;
-        &__buttons {
-            display: flex;
-            gap: 10px;
-            justify-content: center;
-            & > a {
-                cursor: pointer;
-            }
-        }
     }
     &__form {
         display: flex;
