session-logic service has been created

--- a/src/app/main-login/sign-in/sign-in.component.html
+++ b/src/app/main-login/sign-in/sign-in.component.html
@@ -30,7 +30,8 @@
             </mat-error>
         </mat-form-field>
         <br>
-        <app-main-button class="big" [disabled]="signInLoading">SIGN IN</app-main-button>        
+        <app-main-button class="big" [disabled]="signInLoading">SIGN IN</app-main-button>
+        <a class="login__form__forgot-password">Forgot your password?</a>      
     </div>
 
     <div class="login__social-media">
