password reset component has been added

--- a/src/app/main-login/main-login.component.html
+++ b/src/app/main-login/main-login.component.html
@@ -10,7 +10,7 @@
                     <h1>Hello Friend!</h1>
                     <p>Enter your personal information and start journey with us</p>
                 </ng-template>
-                <app-main-button class="medium" (click)="isSignIn = !isSignIn">{{isSignIn ? 'SIGN UP' : 'SIGN IN'}}
+                <app-main-button class="big" (click)="isSignIn = !isSignIn">{{isSignIn ? 'SIGN UP' : 'SIGN IN'}}
                 </app-main-button>
             </div>
         </section>
