--- a/src/app/main-login/sign-in/sign-in.component.html
+++ b/src/app/main-login/sign-in/sign-in.component.html
@@ -31,7 +31,7 @@
         </mat-form-field>
         <br>
         <app-main-button class="big" [disabled]="signInLoading">SIGN IN</app-main-button>
-        <a class="login__form__forgot-password">Forgot your password?</a>      
+        <a class="login__form__forgot-password" (click)="forgotYourPassword()">Forgot your password?</a>      
     </div>
 
     <div class="login__social-media">
