--- a/src/app/main-login/shared/components/password-reset/password-reset.component.html
+++ b/src/app/main-login/shared/components/password-reset/password-reset.component.html
@@ -3,18 +3,15 @@
     <mat-error *ngIf="errorResetPasswordMessage && !resetPasswordLoading">
         <p>{{errorResetPasswordMessage}}</p>
     </mat-error>
-    <mat-progress-bar mode="indeterminate" *ngIf="resetPasswordLoading" class="reset-password__spinner"></mat-progress-bar>
+    <mat-progress-bar mode="indeterminate" *ngIf="resetPasswordLoading" class="reset-password__spinner">
+    </mat-progress-bar>
     <mat-form-field appearance="outline">
         <mat-label>
             <mat-icon matSuffix>email</mat-icon> Email
         </mat-label>
-        <input matInput type="text" name="email" placeholder="write your email"
-            formControlName="email" />
-        <mat-error *ngIf="form.get('email')?.errors?.required">
-            {{uiMessages.requieredField}}
-        </mat-error>
-        <mat-error *ngIf="form.get('email')?.errors?.email">
-            {{uiMessages.wrongEmail}}
+        <input matInput type="text" name="email" placeholder="write your email" formControlName="email" />
+        <mat-error *ngIf="getEmailErrorMessage() as emailErrorMessage" id="emailRequiredError">
+            {{emailErrorMessage}}
         </mat-error>
     </mat-form-field>
 
