--- a/src/app/main-login/sign-up/sign-up.component.html
+++ b/src/app/main-login/sign-up/sign-up.component.html
@@ -31,9 +31,8 @@
                 <mat-icon matSuffix>lock</mat-icon> Password
             </mat-label>
             <input matInput type="password" name="password" id="password" formControlName="password" />
-            <mat-error *ngIf="form.get('password')?.errors?.pattern || form.get('password')?.errors?.required"
-                id="passwordPatternError">
-                {{uiMessages.wrongPasswor}}
+            <mat-error *ngIf="getPasswordErrorMessage() as passwordErrorMessage">
+                {{passwordErrorMessage}}
             </mat-error>
         </mat-form-field>
         <mat-form-field appearance="outline">
