--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,7 +9,6 @@
 // Be sure that you only ever include this mixin once!
 @include mat-core();
 
-
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue. Available color palettes: https://material.io/design/color/
@@ -33,8 +32,12 @@ $angular-firebase-login-theme: mat-light-theme((
 // Alternatively, you can import and @include the theme mixins for each component
 // that you are using.
 @include angular-material-theme($angular-firebase-login-theme);
+@import './themes/toast';
 
 /* You can add global styles to this file, and also import other style files */
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+
+
